Revision history for VMware::vCloud

NB: Skipped version numbers were never released.

VERSIONTAG DATETAG

  Added:
    XML schema descriptors for 1.0 and 1.5 included in distribution.
    VMware::API::vCloud - "Template name validation" to "BUGS and LIMITATIONS" POD.
    VMware::vCloud - get_template(), list_networks(), list_vdcs()
    VMware::API::vCloud - template_get()

  Improved:
    examples/poweron-vapp.pl - Corrected documentation.
    VMware::vCloud & VMware::vCloud::vApp - now used bless() with two arguments.
    VMware::API::vCloud
      _fault() now pushes a Dumper() of the HTTP object on error. That gives 
         more detail on a fault when debug is enabled.
      post() now has optional parameters for content and content type.
      
2.07 2011/10/06

  Improved:
    VMware::API::vCloud: Error handling now recognizes an HTTP::Response object.
    Synopsis documentation on VMware::vCloud.

  Fixed:
    Included VMware::vCloud::vApp in MANIFEST

2.06 2011/10/05

  Added:
    VMware::vCloud::vApp - An object representation of a vApp.
    examples/poweron-vapp.pl - Powering a vApp on.

  Improved:
    Documentation now matches all methods.

2.04 2011/10/03

  Added:
    Caching of data with Cache::Bounded.
    list_templates() & examples/list-vms.pl - List templates
  
  Improved:
    examples/list-vms.pl - Removed commented-out code from 1.x version.


2.01 2011/09/30

  This is a major change in philosophy. Previously this module emulated the API
  in the name of method and returned data structures.

  This does not match most conceptual and desired usage for automation. People
  do not "think" in a collection of REST API calls. They think in actions like
  "deploy a VM."

  Consequently I have moved the direct API implementation to 
  VMware::API::vCloud. It offers an unadulterated pure-perl based view of the
  API and its transactions.

  In VMware::vCloud, I am going to try and present a more human friendly view.

  Added: